--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Rendering utility for threejs",
   "main": "lib/RenderMachine.js",
+  "repository":"https://github.com/ErikPeterson/render-machine-3js.git",
   "scripts": {
     "test": "grunt test"
   },
