--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/RenderMachine.js",
   "repository":"https://github.com/ErikPeterson/render-machine-3js.git",
   "scripts": {
-    "test": "grunt test"
+    "test": "./node_modules/.bin/grunt test"
   },
   "keywords": [
     "threejs",
